Fixed tests, text buttons, cleaned visibility code.

--- a/src/wtf/replay/graphics/ui/eventnavigatortoolbar.less
+++ b/src/wtf/replay/graphics/ui/eventnavigatortoolbar.less
@@ -20,7 +20,7 @@
   }
 
   .leftButtons {
-    min-width: 263px;
+    min-width: 282px;
   }
   .center {
     width: 100%;
