--- a/src/wtf/replay/graphics/ui/graphicspanel.less
+++ b/src/wtf/replay/graphics/ui/graphicspanel.less
@@ -22,7 +22,7 @@
 
     .toolbar {
       vertical-align: top;
-      min-width: 264px;
+      min-width: 311px;
     }
     .rangeSeeker {
       vertical-align: top;
